Interviiew-TF Code-&-Yaml/Pipeline/Microservices_pipeline/TodoAppProject (1)/todoapp_manifest/todoapp-backend/addtodo/addtododeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addtask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: addtask
  template:
    metadata:
      labels:
        app: addtask
    spec:
      containers:
      - name: addtask
        image: devramacr1.azurecr.io/ram-repository/addtasktodo:v1
        ports:
        - containerPort: 8000
