Interviiew-TF Code-&-Yaml/Pipeline/Microservices_pipeline/TodoAppProject (1)/todoapp_manifest/todoapp-backend/addtodo/addtasksvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: addtask
spec:
  selector:
    app: addtask
  ports:
  - port: 80
    targetPort: 8000
